nambahin link github

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <!-- Navbar -->
     <div class="navbar">
+        <nav>
         <ul>
             <li><a href="#home" class="active">Home</a></li>
             <li>
@@ -22,14 +23,17 @@
                 </div>
             </li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="https://github.com/Azkasigma/Ojan-Cina" class="dim link light-silver">GitHub</li>
         </ul>
     </div>
+    </nav>
 
     <!-- Main content -->
     <div class="main-content">
         <h1>Welcome to Our Home section</h1>
         <p>Klik tool di atas untuk lebih banyak pilihan</p>
     </div>
+
+    
 </body>
 </html>
