--- a/index.html
+++ b/index.html
@@ -9,22 +9,31 @@
 <body>
     
     <!-- Navbar -->
+    <!-- Navbar -->
     <div class="navbar">
-        <nav>
         <ul>
-            <li><a href="#home" class="active">Home</a></li>
             <li>
-                <a href="#services">Services</a>
+                <a href="#services">INFO GAME</a>
                 <!-- Dropdown -->
                 <div class="dropdown">
-                    <a href="#web-design">Web Design</a>
-                    <a href="#seo">SEO</a>
-                    <a href="#marketing">Marketing</a>
+                    <a href="#agen">AGEN</a>
+                    <a href="#peta">PETA</a>
+                    <a href="#gudang-senjata">GUDANG SENJATA</a>
+                    <a href="premier">PREMIER</a>
                 </div>
             </li>
-            <li><a href="#about">About</a></li>
-            <li><a href="https://github.com/Azkasigma/Ojan-Cina" class="dim link light-silver">GitHub</li>
-                <h1>ggg</h1>
+            <li><a href="#home" class="active">MEDIA</a></li>
+            <li><a href="#about">ARTIKEL</a></li>
+            <li><a href="#contact">PAPAN PERINGKAT</a></li>
+                <li>
+                 <a href="lebih-banyak">LEBIH BANYAK</a>
+                 <!--Dropdown-->
+                 <div class="dropdown">
+                 <a href="#support">SUPPORT</a>
+                 <a href="#media-sosial">MEDIA SOSIAL</a>
+                 <a href="#esports">Esports</a>
+                </li>
+             </div>
         </ul>
     </div>
     </nav>
