--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VALORANT</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <!-- Navbar -->
     <!-- Navbar -->
     <div class="navbar">
         <ul>
@@ -36,14 +34,12 @@
              </div>
         </ul>
     </div>
-    </nav>
-
-    <!-- Main content -->
-    <div class="main-content">
-        <h1>Welcome to Our Home section</h1>
-        <p>Klik tool di atas untuk lebih banyak pilihan</p>
+<br><br><br><br>
+     <!-- Main content -->
+     <div class="main-content">
+         <h1>Game tembak-menembak taktis berbasis 5v5</h1>
+         <p><img src="https://logo-base.com/logo/valorant_logo_png_wordmark.png" alt=""></p>
+         </style>
     </div>
-
-    
 </body>
 </html>
