--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#services">INFO GAME</a>
                 <!-- Dropdown -->
                 <div class="dropdown">
-                    <a href="#agen">AGEN</a>
+                    <a href="Agen.html">AGEN</a>
                     <a href="#peta">PETA</a>
                     <a href="#gudang-senjata">GUDANG SENJATA</a>
                     <a href="premier">PREMIER</a>
@@ -41,5 +41,6 @@
          <p><img src="https://logo-base.com/logo/valorant_logo_png_wordmark.png" alt=""></p>
          </style>
     </div>
+    
 </body>
 </html>
