--- a/Agen.html
+++ b/Agen.html
@@ -15,21 +15,20 @@
                 <!-- Dropdown -->
                 <div class="dropdown">
                     <a href="Agen.html">AGEN</a>
-                    <a href="#peta">PETA</a>
-                    <a href="#gudang-senjata">GUDANG SENJATA</a>
-                    <a href="premier">PREMIER</a>
+                    <a href="peta.html">PETA</a>
+                    <a href="gudangsenjata.html">GUDANG SENJATA</a>
+                    <a href="premier.html">PREMIER</a>
                 </div>
             </li>
             <li><a href="#home" class="active">MEDIA</a></li>
-            <li><a href="#about">ARTIKEL</a></li>
-            <li><a href="#contact">PAPAN PERINGKAT</a></li>
+            <li><a href="Artikel.html">ARTIKEL</a></li>
                 <li>
                  <a href="lebih-banyak">LEBIH BANYAK</a>
                  <!--Dropdown-->
                  <div class="dropdown">
-                 <a href="#support">SUPPORT</a>
-                 <a href="#media-sosial">MEDIA SOSIAL</a>
-                 <a href="#esports">Esports</a>
+                 <a href="Support.html">SUPPORT</a>
+                 <a href="media-sosial.html">MEDIA SOSIAL</a>
+                 <a href="esport.html">Esports</a>
                 </li>
              </div>
         </ul>
