--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video autoplay muted loop id="bvideo">
+        <source src="videos/valorant.mp4" type="video/mp4">
+    </video> 
     <!-- Navbar -->
     <div class="navbar">
         <ul>
@@ -14,21 +17,21 @@
                 <a href="#services">INFO GAME</a>
                 <!-- Dropdown -->
                 <div class="dropdown">
-                    <a href="Agen.html">AGEN</a>
-                    <a href="peta.html">PETA</a>
-                    <a href="gudangsenjata.html">GUDANG SENJATA</a>
-                    <a href="premier.html">PREMIER</a>
+                    <a href="#agen">AGEN</a>
+                    <a href="#peta">PETA</a>
+                    <a href="#gudang-senjata">GUDANG SENJATA</a>
+                    <a href="premier">PREMIER</a>
                 </div>
             </li>
             <li><a href="#home" class="active">MEDIA</a></li>
-            <li><a href="Artikel.html">ARTIKEL</a></li>
+            <li><a href="#about">ARTIKEL</a></li>
                 <li>
                  <a href="lebih-banyak">LEBIH BANYAK</a>
                  <!--Dropdown-->
                  <div class="dropdown">
-                 <a href="Support.html">SUPPORT</a>
-                 <a href="media-sosial.html">MEDIA SOSIAL</a>
-                 <a href="esport.html">Esports</a>
+                 <a href="#support">SUPPORT</a>
+                 <a href="#media-sosial">MEDIA SOSIAL</a>
+                 <a href="#esports">Esports</a>
                 </li>
              </div>
         </ul>
@@ -38,8 +41,6 @@
      <div class="main-content">
          <h1>Game tembak-menembak taktis berbasis 5v5</h1>
          <p><img src="https://logo-base.com/logo/valorant_logo_png_wordmark.png" alt=""></p>
-         </style>
     </div>
-    
 </body>
 </html>
