--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <!-- Dropdown -->
                 <div class="dropdown">
                     <a href="Agen.html">AGEN</a>
-                    <a href="peta.html">PETA</a>
                     <a href="gudangsenjata.html">GUDANG SENJATA</a>
                     <a href="premier.html">PREMIER</a>
                 </div>
@@ -29,9 +28,9 @@
                  <a href="lebih-banyak">LEBIH BANYAK</a>
                  <!--Dropdown-->
                  <div class="dropdown">
-                 <a href="Support.html">SUPPORT</a>
-                 <a href="media-sosial.html">MEDIA SOSIAL</a>
-                 <a href="esport.html">Esports</a>
+                 <a href="https://support-valorant.riotgames.com/hc/id">SUPPORT</a>
+                 <a href="https://www.instagram.com/valo.web.9/">MEDIA SOSIAL</a>
+                 <a href="https://valorantesports.com/id-ID/">Esports</a>
                 </li>
              </div>
         </ul>
