--- a/premier.html
+++ b/premier.html
@@ -15,7 +15,6 @@
                 <!-- Dropdown -->
                 <div class="dropdown">
                     <a href="Agen.html">AGEN</a>
-                    <a href="peta.html">PETA</a>
                     <a href="gudangsenjata.html">GUDANG SENJATA</a>
                     <a href="premier.html">PREMIER</a>
                 </div>
@@ -26,11 +25,25 @@
                  <a href="lebih-banyak">LEBIH BANYAK</a>
                  <!--Dropdown-->
                  <div class="dropdown">
-                 <a href="Support.html">SUPPORT</a>
-                 <a href="media-sosial.html">MEDIA SOSIAL</a>
-                 <a href="esport.html">Esports</a>
+                 <a href="https://support-valorant.riotgames.com/hc/id">SUPPORT</a>
+                 <a href="https://www.instagram.com/valo.web.9/">MEDIA SOSIAL</a>
+                 <a href="https://valorantesports.com/id-ID/">Esports</a>
                 </li>
              </div>
         </ul>
+        <header></header>
     </div>
 <br><br><br><br>
+
+<div class="Premier">
+    <h1>Semua yang Perlu Kamu Ketahui tentang Premier</h1>
+    <p>Punya pertanyaan penting tentang Premier? Semua infonya ada di sini.</p>
+    <HR></HR>
+    <p>Pertama kali bermain Premier? Atau mungkin kamu hanya butuh penjelasan lagi tentang siapa, apa, kapan, dan di mana. Jangan khawatir, akan kami ulas di sini. Mulailah dengan membaca informasi di bawah ini, atau jika kamu punya pertanyaan yang belum terjawab.
+
+        Seperti biasa, terus berikan masukan di ruang komunitas VALORANT favoritmu.</p>
+        <br>
+        <h1>FAQ PREMIER</h1>
+
+        <h3>UMUM</h3>
+</div>
