--- a/Agen.html
+++ b/Agen.html
@@ -15,7 +15,6 @@
                 <!-- Dropdown -->
                 <div class="dropdown">
                     <a href="Agen.html">AGEN</a>
-                    <a href="peta.html">PETA</a>
                     <a href="gudangsenjata.html">GUDANG SENJATA</a>
                     <a href="premier.html">PREMIER</a>
                 </div>
@@ -26,9 +25,9 @@
                  <a href="lebih-banyak">LEBIH BANYAK</a>
                  <!--Dropdown-->
                  <div class="dropdown">
-                 <a href="Support.html">SUPPORT</a>
-                 <a href="media-sosial.html">MEDIA SOSIAL</a>
-                 <a href="esport.html">Esports</a>
+                 <a href="https://support-valorant.riotgames.com/hc/id">SUPPORT</a>
+                 <a href="https://www.instagram.com/valo.web.9/">MEDIA SOSIAL</a>
+                 <a href="https://valorantesports.com/id-ID/">Esports</a>
                 </li>
              </div>
         </ul>
@@ -36,7 +35,7 @@
 <br><br><br><br>
      <!-- Main content -->
      <div class="Agent">
-        <h2>AGEN</h2>
+        <h2>AGENT</h2>
         <div class="card-container">
             </div>
             <div class="card-container">
