--- a/Agen.html
+++ b/Agen.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VALORANT</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      body {
+         background-image: url(https://i.seadn.io/gae/wlDnITQO80ydgjHXOXx1iW0DAKrFTC-BoVQ6fXvz5pze5bJhj-BbHV0gVvxv1TqM51EYceT2hMiIeQ1j3JxXUGktBTTXCiVSRG8dsmg?auto=format&w=3840);
+         background-size: cover;
+         background-position: center;
+         background-repeat: repeat;
+         background-size: 95%;
+      }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -35,14 +44,14 @@
 <br><br><br><br>
      <!-- Main content -->
      <div class="Agent">
-        <h2>AGENT</h2>
+        <h2 style="color: white;">AGENT</h2>
         <div class="card-container">
             </div>
             <div class="card-container">
                 <div class="card">
                   <img src="photo/brimb.jpg" alt="Image 1">
                   <div class="card-content">
-                    <h3>Brimbstone</h3>
+                    <h3>BRIMBSTONE</h3>
                     <p>-</p>
                   </div>
                 </div>
@@ -50,7 +59,7 @@
                 <div class="card">
                   <img src="photo/phoe.jpg" alt="Image 2">
                   <div class="card-content">
-                    <h3>Phoenix</h3>
+                    <h3>PHOENIX</h3>
                     <p>-</p>
                   </div>
                 </div>
@@ -58,7 +67,7 @@
                 <div class="card">
                   <img src="photo/Sage.webp" alt="Image 3">
                   <div class="card-content">
-                    <h3>Sage</h3>
+                    <h3>SAGE</h3>
                     <p>-</p>
                   </div>
                 </div>
@@ -66,7 +75,7 @@
                 <div class="card">
                   <img src="photo/Sova.webp" alt="Image 4">
                   <div class="card-content">
-                    <h3>Sova</h3>
+                    <h3>SOVA</h3>
                     <p>-</p>
                   </div>
                 </div>
@@ -76,7 +85,7 @@
                 <div class="card">
                   <img src="photo/viper.webp" alt="Image 5">
                   <div class="card-content">
-                    <h3>Viper</h3>
+                    <h3>VIPER</h3>
                     <p>-</p>
                   </div>
                 </div>
@@ -84,7 +93,7 @@
                 <div class="card">
                   <img src="photo/omen.webp" alt="Image 6">
                   <div class="card-content">
-                    <h3>Omen</h3>
+                    <h3>OMEN</h3>
                     <p>-</p>
                   </div>
                 </div>
@@ -92,7 +101,7 @@
                 <div class="card">
                   <img src="photo/Jett.webp" alt="Image 7">
                   <div class="card-content">
-                    <h3>Jett</h3>
+                    <h3>JETT</h3>
                     <p>-</p>
                   </div>
                 </div>
@@ -100,7 +109,7 @@
                 <div class="card">
                   <img src="photo/yoru.webp" alt="Image 8">
                   <div class="card-content">
-                    <h3>yoru</h3>
+                    <h3>YORU</h3>
                     <p>-</p>
                   </div>
                 </div>
