--- a/gudangsenjata.html
+++ b/gudangsenjata.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VALORANT</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      body {
+         background-image: url(https://cmsassets.rgpub.io/sanity/images/dsfx7636/news/57e5d93a924bf34a0959177c30fc57d1238c5bf8-5120x828.png?auto=format&fit=fill&q=80&w=1885);
+         background-size: cover;
+         background-position: center;
+         background-repeat: repeat;
+         background-size: 140%;
+      }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
