--- a/premier.html
+++ b/premier.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VALORANT</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: hsl(34, 36%, 88%);
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -33,17 +38,19 @@
         </ul>
         <header></header>
     </div>
-<br><br><br><br>
+<br><br>
 
 <div class="Premier">
-    <h1>Semua yang Perlu Kamu Ketahui tentang Premier</h1>
+    <h1 style="text-transform: capitalize; font-size: 45px;">Semua yang Perlu Kamu Ketahui tentang Premier</h1>
     <p>Punya pertanyaan penting tentang Premier? Semua infonya ada di sini.</p>
-    <HR></HR>
-    <p>Pertama kali bermain Premier? Atau mungkin kamu hanya butuh penjelasan lagi tentang siapa, apa, kapan, dan di mana. Jangan khawatir, akan kami ulas di sini. Mulailah dengan membaca informasi di bawah ini, atau jika kamu punya pertanyaan yang belum terjawab.
-
-        Seperti biasa, terus berikan masukan di ruang komunitas VALORANT favoritmu.</p>
+    <HR></HR> <br><br>
+    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">Pertama kali bermain Premier? Atau mungkin kamu hanya butuh penjelasan lagi tentang</p>
+    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">siapa, apa, kapan, dan di mana. Jangan khawatir, akan kami ulas di sini. Mulailah dengan</p>
+    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">membaca informasi di bawah ini, atau jika kamu punya pertanyaan yang belum terjawab.</p>
+    <br>
+    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">Seperti biasa, terus berikan masukan di ruang komunitas VALORANT favoritmu.</p>
         <br>
-        <h1>FAQ PREMIER</h1>
+        <h1 style="font-weight: lighter;">FAQ PREMIER</h1>
 
-        <h3>UMUM</h3>
+        <h3 style="font-weight: lighter; margin-left: auto; margin-right: auto; width: 80%">UMUM</h3>
 </div>
