--- a/Artikel.html
+++ b/Artikel.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VALORANT</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: hsl(34, 36%, 88%);
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
