--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
              </div>
         </ul>
     </div>
-<br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
      <!-- Main content -->
      <div class="main-content">
-         <h1>Game tembak-menembak taktis berbasis 5v5</h1>
+         <h1 style="font-weight: normal; font-family: Arial, Helvetica, sans-serif;">Game tembak-menembak taktis berbasis 5v5</h1><br>
          <p><img src="https://logo-base.com/logo/valorant_logo_png_wordmark.png" alt=""></p>
     </div>
 </body>
