--- a/gudangsenjata.html
+++ b/gudangsenjata.html
@@ -11,7 +11,7 @@
          background-size: cover;
          background-position: center;
          background-repeat: repeat;
-         background-size: 140%;
+         background-size: 130%;
       }
     </style>
 </head>
@@ -45,9 +45,10 @@
 
 <!-- senjata -->
 <div class="senjata">
-    <h2>PILIH SENJATAMU</h2>
+  <h1 aria-flowto="senjata" >PILIH SENJATAMU</h1>
     <div class="card-container">
         </div>
+        
         <div class="card-container">
             <div class="card">
               <img src="photos/piupiu.jpg" alt="Image 1">
