--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
      <div class="main-content">
          <h1 style="font-weight: normal; font-family: Arial, Helvetica, sans-serif;">Game tembak-menembak taktis berbasis 5v5</h1><br>
          <p><img src="https://logo-base.com/logo/valorant_logo_png_wordmark.png" alt=""></p>
+         <a href="gudangsenjata.html" id="niko"> <button>Start</button> </a>
     </div>
 </body>
 </html>
