--- a/premier.html
+++ b/premier.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background-color: hsl(34, 36%, 88%);
-        }
+         background-image: url(https://i.seadn.io/gae/wlDnITQO80ydgjHXOXx1iW0DAKrFTC-BoVQ6fXvz5pze5bJhj-BbHV0gVvxv1TqM51EYceT2hMiIeQ1j3JxXUGktBTTXCiVSRG8dsmg?auto=format&w=3840);
+         background-size: cover;
+         background-position: center;
+         background-repeat: repeat;
+         background-size: 95%;
+      }
     </style>
 </head>
 <body>
@@ -39,18 +43,19 @@
         <header></header>
     </div>
 <br><br>
-
-<div class="Premier">
-    <h1 style="text-transform: capitalize; font-size: 45px;">Semua yang Perlu Kamu Ketahui tentang Premier</h1>
-    <p>Punya pertanyaan penting tentang Premier? Semua infonya ada di sini.</p>
-    <HR></HR> <br><br>
-    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">Pertama kali bermain Premier? Atau mungkin kamu hanya butuh penjelasan lagi tentang</p>
-    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">siapa, apa, kapan, dan di mana. Jangan khawatir, akan kami ulas di sini. Mulailah dengan</p>
-    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">membaca informasi di bawah ini, atau jika kamu punya pertanyaan yang belum terjawab.</p>
-    <br>
-    <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">Seperti biasa, terus berikan masukan di ruang komunitas VALORANT favoritmu.</p>
+<script></script>
+    <div class="Premier">
+        <h1 style="text-transform: capitalize; font-size: 45px;">Semua yang Perlu Kamu Ketahui tentang Premier</h1>
+        <p>Punya pertanyaan penting tentang Premier? Semua infonya ada di sini.</p>
+        <HR></HR> <br><br>
+        <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">Pertama kali bermain Premier? Atau mungkin kamu hanya butuh penjelasan lagi tentang</p>
+        <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">siapa, apa, kapan, dan di mana. Jangan khawatir, akan kami ulas di sini. Mulailah dengan</p>
+            <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">membaca informasi di bawah ini, atau jika kamu punya pertanyaan yang belum terjawab.</p>
         <br>
-        <h1 style="font-weight: lighter;">FAQ PREMIER</h1>
+        <p style="text-align: justify; margin-left: auto; margin-right: auto; width: 80%;">Seperti biasa, terus berikan masukan di ruang komunitas VALORANT favoritmu.</p>
+            <br>
+         <h1 style="font-weight: lighter;">FAQ PREMIER</h1>
 
         <h3 style="font-weight: lighter; margin-left: auto; margin-right: auto; width: 80%">UMUM</h3>
-</div>
+    </div>
+    
