--- a/Artikel.html
+++ b/Artikel.html
@@ -24,7 +24,7 @@
                     <a href="premier.html">PREMIER</a>
                 </div>
             </li>
-            <li><a href="#home" class="active">MEDIA</a></li>
+            <li><a href="index.html"active">MEDIA</a></li>
             <li><a href="Artikel.html">ARTIKEL</a></li>
                 <li>
                  <a href="lebih-banyak">LEBIH BANYAK</a>
