--- a/gudangsenjata.html
+++ b/gudangsenjata.html
@@ -138,6 +138,7 @@
               <p>JENIS // SENAPAN</p>
             </div>
           </div>
+          
 
           <div class="card">
             <img src="photos/shiss.png" alt="Image 12">
@@ -180,9 +181,7 @@
           </div>
        
           <footer></footer>
-<<<<<<< HEAD
-     </div>
-</div>
-=======
-     </div>
->>>>>>> a8667644853badaaf7d7abb82c27ca41026403cf
+          </div>
+        </div>
+</body>
+</html>
