--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
          <a href="gudangsenjata.html"> 
             <button class="my-button">Start</button>
         </a>
-          
+        <p>NO ENDORSE</p>
+        <p>Kelompok 9</p>
     </div>
 
 </body>
