--- a/gudangsenjata.html
+++ b/gudangsenjata.html
@@ -179,10 +179,11 @@
             </div>
           </div>
        
-          <footer></footer>
-<<<<<<< HEAD
+          <a href="gudangsenjata.html"> 
+            <button class="Agen-button">Pick yours Agen</button>
+          </a>
+          
      </div>
 </div>
-=======
-     </div>
->>>>>>> a8667644853badaaf7d7abb82c27ca41026403cf
+
+
