--- a/gudangsenjata.html
+++ b/gudangsenjata.html
@@ -179,8 +179,11 @@
               <p>JENIS // JARAK DEKAT</p>
             </div>
           </div>
-       
-          <footer></footer>
+
+          <a href="Agen.html"> 
+            <button class="agen-button">Next</button>
+        </a> 
+
      </div>
 </div>
 
