--- a/gudangsenjata.html
+++ b/gudangsenjata.html
@@ -180,10 +180,10 @@
             </div>
           </div>
        
-          <footer></footer>
-<<<<<<< HEAD
+          <a href="Agen.html"> 
+            <button class="agen-button">Next</button>
+        </a> 
      </div>
 </div>
 
      </div>
->>>>>>> a8667644853badaaf7d7abb82c27ca41026403cf
