--- a/gudangsenjata.html
+++ b/gudangsenjata.html
@@ -180,9 +180,10 @@
             </div>
           </div>
 
-          <a href="Agen.html"> 
-            <button class="agen-button">Next</button>
-        </a> 
+         <a href="Agen.html">
+          <button class="agen-button">Agen</button>
+         </a>
+
 
      </div>
 </div>
