--- a/Artikel.html
+++ b/Artikel.html
@@ -43,8 +43,8 @@
         <div class="card">
           <img src="photo/pArt1.webp" alt="Image 1">
           <div class="card-content">
-            <h3><link rel="stylesheet" href="https://valorantesports.com/id-ID/news/riot-games-removes-bleed-esports-from-vct-pacific-and-promotes-boom-esports">Riot Games Keluarkan Bleed Esports dari VCT Pacific dan Promosikan Boom Esports
-Kabar Terbaru tentang VCT Pacific</h3>
+            <h3 class="artikel-title"><a rel="stylesheet" href="https://valorantesports.com/id-ID/news/riot-games-removes-bleed-esports-from-vct-pacific-and-promotes-boom-esports">Riot Games Keluarkan Bleed Esports dari VCT Pacific dan Promosikan Boom Esports
+Kabar Terbaru tentang VCT Pacific</a></h3>
             <p>-</p>
           </div>
         </div>
@@ -52,7 +52,7 @@ Kabar Terbaru tentang VCT Pacific</h3>
         <div class="card">
           <img src="photo/Part2.webp" alt="Image 2">
           <div class="card-content">
-            <h3><link href="https://www.youtube.com/watch?v=bGwdLgObQCs">Aksi Terbaik EDG Tahun 2024</link></h3>
+            <h3 class="artikel-title"><a href="https://www.youtube.com/watch?v=bGwdLgObQCs">Aksi Terbaik EDG Tahun 2024</a></h3>
             <p>-</p>
           </div>
         </div>
@@ -60,7 +60,7 @@ Kabar Terbaru tentang VCT Pacific</h3>
         <div class="card">
           <img src="photo/Part3.webp" alt="Image 3">
           <div class="card-content">
-            <h3><link href="https://valorantesports.com/id-ID/news/game-changers-championship-live-audience-and-ticket-sale-information">Game game-changers-championship-live-audience-and-ticket-sale-information</link></h3>
+            <h3 class="artikel-title"><a href="https://valorantesports.com/id-ID/news/game-changers-championship-live-audience-and-ticket-sale-information">Game game-changers-championship-live-audience-and-ticket-sale-information</a></h3>
             <p>-</p>
           </div>
         </div>
