--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <h1 style="font-weight: normal; font-family: Arial, Helvetica, sans-serif;">Game tembak-menembak taktis berbasis 5v5</h1><br>
          <p><img src="https://logo-base.com/logo/valorant_logo_png_wordmark.png" alt=""></p>
          <a href="gudangsenjata.html"> 
-            <button class="my-button">Start</button>
+           <button class="my-button" style="justify-content: center;">Start</button>
         </a>
         <p>NO ENDORSE</p>
         <p>Kelompok 9</p>
